Closed Bug 1572858 Opened 5 years ago Closed 5 years ago

Intermittent "Not in forced shutdown?" /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html | assertion count 1 is more than expected 0 assertions

Categories

(Core :: Audio/Video: MediaStreamGraph, defect, P5)

70 Branch
defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: pehrsons)

References

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=260842297&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/LTz2QCrQR7O9Uh2ypTbnRg/runs/0/artifacts/public/logs/live_backing.log


[task 2019-08-09T18:55:39.488Z] 18:55:39 INFO - TEST-START | /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html
[task 2019-08-09T18:55:39.498Z] 18:55:39 INFO - Closing window 85
[task 2019-08-09T18:55:39.508Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.508Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.509Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.509Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.509Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.509Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.509Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.510Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.510Z] 18:55:39 INFO - PID 6092 | [Child 236, Main Thread] WARNING: No active window: file z:/build/bu[Parent 6356, Mainild/src/js/xpconnect/src/XPCJSContext.cpp, line 664
[task 2019-08-09T18:55:39.510Z] 18:55:39 INFO - PID 6092 | Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.510Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.560Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.565Z] 18:55:39 INFO - PID 6092 | [Child 6576, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.565Z] 18:55:39 INFO - PID 6092 | [Child 6576, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.574Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.574Z] 18:55:39 INFO - PID 6092 | [GPU 2452, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.574Z] 18:55:39 INFO - PID 6092 | [GPU 2452, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.584Z] 18:55:39 INFO - PID 6092 | ++DOCSHELL 000002060E24F000 == 1 [pid = 11136] [id = {db85c4ce-f491-4dba-9a19-f7cd3ac2d4eb}]
[task 2019-08-09T18:55:39.585Z] 18:55:39 INFO - PID 6092 | ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2019-08-09T18:55:39.585Z] 18:55:39 INFO - PID 6092 | ++DOMWINDOW == 1 (0000020614861020) [pid = 11136] [serial = 1] [outer = 0000000000000000]
[task 2019-08-09T18:55:39.585Z] 18:55:39 INFO - PID 6092 | [GPU 2452, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.586Z] 18:55:39 INFO - PID 6092 | [GPU 2452, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.586Z] 18:55:39 INFO - PID 6092 | ++DOMWINDOW == 2 (000002060E2C4400) [pid = 11136] [serial = 2] [outer = 0000020614861020]
[task 2019-08-09T18:55:39.586Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.586Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.586Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
[task 2019-08-09T18:55:39.596Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.596Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.597Z] 18:55:39 INFO - PID 6092 | [Child 11136, Main Thread] WARNING: No active window: file z:/build/build/src/js/xpconnect/src/XPCJSContext.cpp, line 664
[task 2019-08-09T18:55:39.656Z] 18:55:39 INFO - PID 6092 | --DOCSHELL 0000026203C4F000 == 0 [pid = 6576] [id = {7fa349bd-f6e5-41fb-bddf-25f17f2b1d13}] [url = https://web-platform.test:8443/mediacapture-streams/MediaStreamTrack-applyConstraints.https.html]
[task 2019-08-09T18:55:39.699Z] 18:55:39 INFO - PID 6092 | --DOMWINDOW == 3 (000002620A16A020) [pid = 6576] [serial = 1] [outer = 0000000000000000] [url = https://web-platform.test:8443/mediacapture-streams/MediaStreamTrack-applyConstraints.https.html]
[task 2019-08-09T18:55:39.699Z] 18:55:39 INFO - PID 6092 | --DOMWINDOW == 2 (0000026203CC5800) [pid = 6576] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-08-09T18:55:39.699Z] 18:55:39 INFO - PID 6092 | --DOMWINDOW == 1 (000002620BE65000) [pid = 6576] [serial = 4] [outer = 0000000000000000] [url = https://web-platform.test:8443/mediacapture-streams/MediaStreamTrack-applyConstraints.https.html]
[task 2019-08-09T18:55:39.699Z] 18:55:39 INFO - PID 6092 | --DOMWINDOW == 0 (000002620BA7A400) [pid = 6576] [serial = 3] [outer = 0000000000000000] [url = about:blank]
[task 2019-08-09T18:55:39.729Z] 18:55:39 INFO - PID 6092 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to c:\users\task_1565372293\appdata\local\temp\tmpapjqb8.mozrunner\runtests_leaks_11020_tab_pid9684.log
[task 2019-08-09T18:55:39.733Z] 18:55:39 INFO - PID 6092 | [Child 6576, Main Thread] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file z:/build/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2019-08-09T18:55:39.733Z] 18:55:39 INFO - PID 6092 | [Child 6576, Main Thread] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file z:/build/build/src/xpcom/base/nsTraceRefcnt.cpp, line 198
[task 2019-08-09T18:55:39.733Z] 18:55:39 INFO - PID 6092 | nsStringStats
[task 2019-08-09T18:55:39.733Z] 18:55:39 INFO - PID 6092 | => mAllocCount: 7161
[task 2019-08-09T18:55:39.733Z] 18:55:39 INFO - PID 6092 | => mReallocCount: 0
[task 2019-08-09T18:55:39.734Z] 18:55:39 INFO - PID 6092 | => mFreeCount: 7161
[task 2019-08-09T18:55:39.734Z] 18:55:39 INFO - PID 6092 | => mShareCount: 7605
[task 2019-08-09T18:55:39.734Z] 18:55:39 INFO - PID 6092 | => mAdoptCount: 550
[task 2019-08-09T18:55:39.734Z] 18:55:39 INFO - PID 6092 | => mAdoptFreeCount: 554
[task 2019-08-09T18:55:39.734Z] 18:55:39 INFO - PID 6092 | => Process ID: 6576, Thread ID: 7928
[task 2019-08-09T18:55:39.792Z] 18:55:39 INFO - PID 6092 | ++DOMWINDOW == 3 (000002061607B400) [pid = 11136] [serial = 3] [outer = 0000020614861020]
[task 2019-08-09T18:55:39.792Z] 18:55:39 INFO - PID 6092 | [Child 11136, Main Thread] WARNING: NS_ENSURE_SUCCESS(mStatus, *this) failed with result 0x80004005: file z:/build/build/src/obj-firefox/dist/include\nsIURIMutator.h, line 489
[task 2019-08-09T18:55:39.952Z] 18:55:39 INFO - PID 6092 | ++DOMWINDOW == 4 (0000020616461C00) [pid = 11136] [serial = 4] [outer = 0000020614861020]
[task 2019-08-09T18:55:39.952Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.952Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.952Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.952Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.953Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.953Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.963Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.963Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.963Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:39.963Z] 18:55:39 INFO - PID 6092 | [Parent 6356, Main Thread] WARNING: Constructing RangeBoundary with invalid value: 'mRef || aOffset == 0', file z:/build/build/src/obj-firefox/dist/include\mozilla/RangeBoundary.h, line 79
[task 2019-08-09T18:55:40.155Z] 18:55:40 INFO - PID 6092 | [Child 11136, Main Thread] ###!!! ASSERTION: Not in forced shutdown?: 'mGraph->mForceShutDown', file z:/build/build/src/dom/media/MediaStreamGraph.cpp, line 1574
[task 2019-08-09T18:55:40.255Z] 18:55:40 INFO - Got content assert count 1
[task 2019-08-09T18:55:40.272Z] 18:55:40 INFO - TEST-UNEXPECTED-FAIL | /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html | assertion count 1 is more than expected 0 assertions
[task 2019-08-09T18:55:40.272Z] 18:55:40 INFO - ..................................
[task 2019-08-09T18:55:40.272Z] 18:55:40 INFO - TEST-OK | /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html | took 784ms

https://searchfox.org/mozilla-central/rev/ec806131cb7bcd1c26c254d25cd5ab8a61b2aeb6/dom/media/MediaStreamGraph.cpp#1574
This assertion is not strictly necessary from a graph contract point of view, but the stream added after graph shutdown will not perform any processing. That may be a surprise to the caller, but I don't know who that caller may be.

Summary: Intermittent /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html | assertion count 1 is more than expected 0 assertions → Intermittent "Not in forced shutdown?" /mediacapture-streams/MediaStreamTrack-getCapabilities.https.html | assertion count 1 is more than expected 0 assertions
See Also: → 1573799
Blocks: 1573812

One way to figure out who the caller is would be to tighten the assert in MSG::AddStream a bit further.

What I'm considering is essentially MOZ_DIAGNOSTIC_ASSERT(GetInstanceIfExists() == this) but since that takes an additional window we might want something simpler that just checks whether this currently exists in gGraphs. If it doesn't, shutdown has gotten far enough that we should have created a new graph instead of using this.

See Also: → 1574965
Keywords: leave-open
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/cb6f837e4a7b
Tighten MSG::AddStream assert. r=karlt

I'm closing this. This assert had real value, and I think other bugs have fixed the root cause since this landed. Perhaps bug 1573102?

Assignee: nobody → apehrson
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
See Also: → 1573102
Version: unspecified → 70 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: