Bug 1572858 - Tighten MSG::AddStream assert. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D43596